testament/tests/shouldfail/tcolumn.nim
discard """
line: 8
column: 7
errormsg: "undeclared identifier: 'undeclared'"
"""

# test should fail because the line directive is wrong
echo undeclared
